--- a/author.html
+++ b/author.html
@@ -33,6 +33,7 @@
             <tr>
                 <th>ID</th>
                 <th>Author Name</th>
+                <th>Action</th>
             </tr>
             </thead>
             <tbody id="authorList">
