--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div align="center">
+    <a href="author.html" style="text-decoration: none">Author Management</a>
     <div>
         <h2>Search</h2>
     </div>
